crates/aven-check/tests/fixtures/check/invalid/literal-match-non-exhaustive.av
status : @{"waiting", "running", "done"} = "waiting"
result = status ?>
  "waiting" => 1
  "running" => 2
